--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,8 @@
         "dotenv": "^17.2.3",
         "express": "^5.2.1",
         "jsonwebtoken": "^9.0.3",
+        "morgan": "^1.10.1",
+        "winston": "^3.19.0",
         "zod": "^4.3.4"
     },
     "devDependencies": {
@@ -27,6 +29,7 @@
         "@types/cors": "^2.8.19",
         "@types/express": "^5.0.6",
         "@types/jsonwebtoken": "^9.0.10",
+        "@types/morgan": "^1.9.10",
         "@types/node": "^25.0.3",
         "prisma": "^6.1.0",
         "ts-node": "^10.9.2",
